RESULTS/AutoSpec/raw_results/out-4o-sv-comp-mx/out/half_2_true-unreach-call_0002/half_2_true-unreach-call_merged.txt
/home/dimpling/AutoSpec/out/half_2_true-unreach-call_0002/half_2_true-unreach-call_merged.c:35:3: error: unterminated comment
   35 |   /*@;
      |   ^
